--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>苹果手机下单系统</title>
-        <link href='css/style.css'>
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
 	<h1>
