--- a/index.html
+++ b/index.html
@@ -2,17 +2,24 @@
 <html>
 <head>
 	<title>苹果手机下单系统</title>
+	<script src="http://libs.baidu.com/jquery/2.0.0/jquery.js"></script>
     <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <script>
+    	// console.log('refresh');
+    	// (function() {
+    	// 	setTimeout(()=>{location.reload();}, 2000);
+    	// })();
+    </script>
 </head>
 <body>
 	<h1>
-		Welcome to my website!aas
+		Welcome to my website!
 	</h1>
 
 	<div class="btn-group" role="group" aria-label="...">
-	  <button type="button" class="btn btn-default">苹果</button>
+	  <button type="button" class="btn btn-success">苹果</button>
 	  <button type="button" class="btn btn-default">小米</button>
-	  <button type="button" class="btn btn-default">华为</button>
+	  <button type="button" class="btn btn-info">华为</button>
 	</div>
 </body>
 </html>
