Move 3rd css/js to root

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>苹果手机下单系统</title>
-	<script src="http://libs.baidu.com/jquery/2.0.0/jquery.js"></script>
-    <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+	<script src="https://libs.baidu.com/jquery/2.0.0/jquery.js"></script>
+    <link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
     <script>
     	// console.log('refresh');
     	// (function() {
